--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java-gradle-plugin'
+    id "com.gradle.plugin-publish" version "0.10.1"
     id 'maven-publish'
     id 'idea'
 }
@@ -8,7 +9,7 @@ group = 'com.github.bhuemer.gbt'
 version = '0.1-SNAPSHOT'
 
 repositories {
-    mavenCentral()
+    jcenter()
 }
 
 dependencies {
@@ -18,9 +19,13 @@ dependencies {
 
 gradlePlugin {
     plugins {
-        simplePlugin {
+        scalaPlugin {
             id = 'com.github.bhuemer.gbt'
             implementationClass = 'com.github.bhuemer.gbt.ScalaPlugin'
         }
     }
+}
+
+pluginBundle {
+    website = "https://"
 }
