--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java-gradle-plugin'
-    id "com.gradle.plugin-publish" version "0.10.1"
+    id 'com.gradle.plugin-publish' version '0.10.1'
     id 'maven-publish'
     id 'idea'
 }
@@ -13,8 +13,8 @@ repositories {
 }
 
 dependencies {
-    implementation "org.scala-sbt:zinc_2.12:1.3.0"
-    testImplementation "junit:junit:4.12"
+    implementation 'org.scala-sbt:zinc_2.12:1.3.0'
+    testImplementation 'junit:junit:4.12'
 }
 
 gradlePlugin {
@@ -27,5 +27,14 @@ gradlePlugin {
 }
 
 pluginBundle {
-    website = "https://"
+    website = 'https://github.com/bhuemer/gbt'
+    vcsUrl = 'https://github.com/bhuemer/gbt'
+    description = 'Scala compiler plugin based on SBT'
+    tags = ['scala']
+
+    plugins {
+        scalaPlugin {
+            displayName = 'Scala Compiler Plugin'
+        }
+    }
 }
