- Making test compiles depend correctly on main compiles.

--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,9 @@ plugins {
 group = 'com.github.bhuemer.gbt'
 version = '0.1-SNAPSHOT'
 
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
+
 repositories {
     jcenter()
 }
