--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,41 +1,37 @@
-version: 2
+# Java Gradle CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/language-java/ for more details
+#
 
+version: 2
 jobs:
   build:
+    docker:
+      - image: circleci/openjdk:8-jdk
+
+    working_directory: ~/repo
+
+    environment:
+      # Customize the JVM maximum heap limit
+      JVM_OPTS: -Xmx3200m
+      TERM: dumb
+
     steps:
       - checkout
 
+      # Download and cache dependencies
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "build.gradle" }}
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
 
+      - run: ./gradlew dependencies
+
       - save_cache:
           paths:
             - ~/.gradle
-          key: v1-dependencies--{{ checksum "build.gradle" }}
+          key: v1-dependencies-{{ checksum "build.gradle" }}
 
-      - run:
-          name: Compiling and running tests
-          command: ./gradlew test
-          when: always
-
-      - run:
-          name: Saving test results
-          command: |
-            mkdir -p ~/test-results/junit/
-            find . -type f -regex ".*/build/test-results/.*xml" -exec cp {} ~/test-results/junit/ \;
-          when: always
-
-      - store_test_results:
-          path: ~/test-results
-
-      - store_artifacts:
-          path: ~/test-results/junit
-
-workflows:
-  version: 2
-  workflow:
-    jobs:
-      - build
+      # run tests!
+      - run: ./gradlew test
