--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,23 @@
 plugins {
     id 'java-gradle-plugin'
-    id 'com.gradle.plugin-publish' version '0.10.1'
+    id 'com.gradle.plugin-publish' version '0.18.0'
     id 'maven-publish'
     id 'idea'
 }
 
 group = 'com.github.bhuemer.gbt'
-version = '0.1-SNAPSHOT'
+version = '0.0.2'
 
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 
 repositories {
-    jcenter()
+    mavenCentral()
 }
 
 dependencies {
-    implementation 'org.scala-sbt:zinc_2.12:1.3.0'
+    implementation 'org.scala-sbt:zinc_2.12:1.6.1'
+
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.hamcrest:hamcrest-library:1.3'
 }
